src/test/resources/invalid_tests/InvalidLayerDimension1.cnna
architecture InvalidLayerDimension1{
    def input in
    def output out
    
    in ->
    fullyConnected(units=128)
    convolution(filters=4, kernel=(2,2))
    output {
        fullyConnected()
        activation.softmax()
    } -> out
}